# llm-deployment

./: Dockerfile  docker-compose.yaml  ingest.py  main.py  pyproject.toml  requirements.txt  serve.py
