[tool.poetry]
name = "fast"
version = "0.1.0"
description = "text-to-sql"
authors = ["anilbhpoetry "]
readme = "README.md"
packages = [
    { include = "app" },
]
[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"

pydantic = "1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


